Fix z-index #sub_nav content Update export.php pour utiliser le /user/config/config.php

--- a/app/module/core/ui/css/0-top.less
+++ b/app/module/core/ui/css/0-top.less
@@ -80,6 +80,7 @@
 	background: @sub_nav-background;
 	border-bottom: 1px solid @sub_nav-border;
 	font-size: 11px; line-height: 13px; color: #666;
+    z-index: 100000;
 	
 	&.fixed{
 		position: fixed;
